deploy.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: triviahhh-api-gateway
      app.kubernetes.io/component: triviahhh-api-gateway
      app.kubernetes.io/instance: triviahhh-api-gateway
      language: quarkus
      quotesforu: apigateway
      sandbox: labels
      tier: apigateway
    name: triviahhh-api-gateway
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/rhdevelopers/triviahhh-api-gateway:latest
      from:
        kind: DockerImage
        name: quay.io/rhdevelopers/triviahhh-api-gateway:latest
      generation: null
      importPolicy:
        importMode: Legacy
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"triviahhh-api-gateway:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"triviahhh-api-gateway\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: triviahhh-api-gateway
      app.kubernetes.io/component: triviahhh-api-gateway
      app.kubernetes.io/instance: triviahhh-api-gateway
      language: quarkus
      quotesforu: apigateway
      sandbox: labels
      tier: apigateway
    name: triviahhh-api-gateway
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: triviahhh-api-gateway
        language: quarkus
        quotesforu: apigateway
        sandbox: labels
        tier: apigateway
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: triviahhh-api-gateway
          language: quarkus
          quotesforu: apigateway
          sandbox: labels
          tier: apigateway
      spec:
        containers:
        - image: ' '
          name: triviahhh-api-gateway
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: triviahhh-api-gateway
      app.kubernetes.io/component: triviahhh-api-gateway
      app.kubernetes.io/instance: triviahhh-api-gateway
      language: quarkus
      quotesforu: apigateway
      sandbox: labels
      tier: apigateway
    name: triviahhh-api-gateway
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: triviahhh-api-gateway
      language: quarkus
      quotesforu: apigateway
      sandbox: labels
      tier: apigateway
  status:
    loadBalancer: {}
kind: List
metadata: {}
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: triviahhh-api-gateway
  labels:
    app: triviahhh-api-gateway
    app.kubernetes.io/component: triviahhh-api-gateway
    app.kubernetes.io/instance: triviahhh-api-gateway
    language: quarkus
    quotesforu: apigateway
    sandbox: labels
    tier: apigateway
spec:
  to:
    kind: Service
    name: triviahhh-api-gateway
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
